--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-rvm:
-  - 1.9.3
-bundler_args: --without development
-script: "rake test"
+language: node_js
+node_js:
+  - "0.10"
+before_install:
+  - npm install -g grunt-cli
