--- a/package.json
+++ b/package.json
@@ -3,22 +3,36 @@
   "version": "2.0.0",
   "description": "A lightweight library that provides tools for organizing asynchronous code",
   "main": "main.js",
-  "directories": { "lib": "lib" },
+  "directories": {
+    "lib": "lib"
+  },
   "devDependencies": {
     "jshint": "~0.9",
-    "promise-tests": "2.0.0",
-    "uglify-js": "~2.2",
-    "es6-module-transpiler": "~0.1.2"
+    "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-es6-module-transpiler": "git://github.com/yapplabs/grunt-es6-module-transpiler.git",
+    "grunt-contrib-jshint": "~0.5.4",
+    "grunt-contrib-uglify": "~0.2.1",
+    "promises-aplus-tests": "~1.3.1",
+    "grunt-browserify": "~1.0.2",
+    "grunt-mocha-test": "~0.4.0",
+    "grunt-mocha-phantomjs": "~0.2.8"
   },
   "scripts": {
-    "test": "promise-tests all ./tests/test-adapter",
-    "lint": "jshint lib"
+    "test": "grunt test",
+    "lint": "jshint lib",
+    "prepublish": "grunt build"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/tildeio/rsvp.js.git"
   },
-  "bugs": { "url": "https://github.com/tildeio/rsvp.js/issues" },
+  "bugs": {
+    "url": "https://github.com/tildeio/rsvp.js/issues"
+  },
   "keywords": [
     "promises",
     "futures",
