--- a/package.json
+++ b/package.json
@@ -9,16 +9,9 @@
   "devDependencies": {
     "jshint": "~0.9",
     "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-es6-module-transpiler": "git://github.com/yapplabs/grunt-es6-module-transpiler.git",
-    "grunt-contrib-jshint": "~0.5.4",
-    "grunt-contrib-uglify": "~0.2.1",
+    "grunt-ember-dev": "git://github.com/thomasboyt/grunt-ember-dev.git",
     "promises-aplus-tests": "~1.3.1",
     "grunt-browserify": "~1.0.2",
-    "grunt-mocha-test": "~0.4.0",
     "grunt-mocha-phantomjs": "~0.2.8"
   },
   "scripts": {
