Updated main.js location

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rsvp",
   "version": "2.0.0",
   "description": "A lightweight library that provides tools for organizing asynchronous code",
-  "main": "main.js",
+  "main": "dist/commonjs/main.js",
   "directories": {
     "lib": "lib"
   },
