--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt-ember-dev": "git://github.com/thomasboyt/grunt-ember-dev.git",
     "promises-aplus-tests": "~1.3.1",
     "grunt-browserify": "~1.0.2",
-    "grunt-mocha-phantomjs": "~0.2.8"
+    "grunt-mocha-phantomjs": "~0.2.8",
+    "grunt-mocha-test": "~0.4.0"
   },
   "scripts": {
     "test": "grunt test",
