--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "jshint": "~0.9",
     "grunt": "~0.4.1",
-    "grunt-ember-dev": "git://github.com/thomasboyt/grunt-ember-dev.git",
+    "grunt-microlib": "git://github.com/thomasboyt/grunt-microlib.git",
     "promises-aplus-tests": "~1.3.1",
     "grunt-browserify": "~1.0.2",
     "grunt-mocha-phantomjs": "~0.2.8",
